Make TileDecks truly immutable